# stitch_android

./: import-summary.txt  my_update.sh  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/stitch/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  lib_img.cpp  lib_test.cpp  native-lib.cpp  stitch.cpp  test_a.cpp  test_b.cpp  test_c.cpp  test_e.cpp
app/src/main/java/com/example/stitch/: ImageSelect.java  LocalRecognize.java  LocalRecognizeParam.java  LocalStitch.java  LocalStitchParam.java  MainActivity.java
app/src/main/java/com/example/stitch/interfaces/: FileManager.java  IconManager.java
app/src/main/java/com/example/stitch/utils/: ImgSize.java
app/src/main/res/drawable/: button_1.xml  button_2.xml  button_3.xml  button_4.xml  button_5.xml  button_6.xml  button_7.xml  button_8.xml  checkbox_library.xml  checkbox_normal.xml  checkbox_pressed.xml  dialog_1.xml  item_dir.xml  item_file.xml
app/src/main/res/layout/: activity_main.xml  image_select.xml  local_recognize.xml  local_stitch.xml  main_activity.xml  spinner_1.xml  stitch_param.xml
app/src/main/res/values/: colors.xml  styles_button.xml  styles_tab.xml
gradle/wrapper/: gradle-wrapper.properties
opencv4/: build.gradle
